force-app/main/default/objects/REP_Profile__c/REP_Profile__c.object-meta.xml
<CustomObject>
    <label>REP Profile</label>
    <nameField>
        <label>REP Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REP Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>