force-app/main/default/objects/REP_Profile__c/fields/About_Us__c.field-meta.xml
<CustomField>
    <fullName>About_Us__c</fullName>
    <description>This information will be shown to customers who want to know more about your REP</description>
    <inlineHelpText>This information will be shown to customers who want to know more about your REP</inlineHelpText>
    <label>About Us</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>