force-app/main/default/objects/REP_Profile__c/fields/Accept_American_Express__c.field-meta.xml
<CustomField>
    <fullName>Accept_American_Express__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accept American Express</label>
    <type>Checkbox</type>
</CustomField>