force-app/main/default/objects/REP_Profile__c/fields/Accept_Discover__c.field-meta.xml
<CustomField>
    <fullName>Accept_Discover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Discover</label>
    <type>Checkbox</type>
</CustomField>