force-app/main/default/objects/REP_Profile__c/fields/Accept_MasterCard__c.field-meta.xml
<CustomField>
    <fullName>Accept_MasterCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept MasterCard</label>
    <type>Checkbox</type>
</CustomField>