force-app/main/default/objects/REP_Profile__c/fields/Accept_Visa__c.field-meta.xml
<CustomField>
    <fullName>Accept_Visa__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accept Visa</label>
    <type>Checkbox</type>
</CustomField>