force-app/main/default/objects/REP_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this REP profile active?</description>
    <inlineHelpText>Is this REP profile active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>