force-app/main/default/objects/REP_Profile__c/fields/AEPC_Variable_Rate_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>AEPC_Variable_Rate_Last_Updated__c</fullName>
    <label>AEPC Variable Rate Last Updated</label>
    <type>Date</type>
</CustomField>