force-app/main/default/objects/REP_Profile__c/fields/AEPN_Variable_Rate_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>AEPN_Variable_Rate_Last_Updated__c</fullName>
    <label>AEPN Variable Rate Last Updated</label>
    <type>Date</type>
</CustomField>