force-app/main/default/objects/REP_Profile__c/fields/Allow_credit_card_for_autopay__c.field-meta.xml
<CustomField>
    <fullName>Allow_credit_card_for_autopay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customers can enter CC# information to sign up for autopay</description>
    <inlineHelpText>Customers can enter CC# information to sign up for autopay</inlineHelpText>
    <label>Allow credit card for autopay</label>
    <type>Checkbox</type>
</CustomField>