force-app/main/default/objects/REP_Profile__c/fields/Alternate_Order_Notification_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Order_Notification_Email_2__c</fullName>
    <description>Additional email for order notifications, if necessary.</description>
    <inlineHelpText>Additional email for order notifications, if necessary.</inlineHelpText>
    <label>Residential Order Notification Email 3</label>
    <type>Email</type>
</CustomField>