force-app/main/default/objects/REP_Profile__c/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <description>When did you start serving the Texas retail electric market?</description>
    <inlineHelpText>When did you start serving the Texas retail electric market?</inlineHelpText>
    <label>Business Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>