force-app/main/default/objects/REP_Profile__c/fields/CEHE_Variable_Rate_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CEHE_Variable_Rate_Last_Updated__c</fullName>
    <label>CEHE Variable Rate Last Updated</label>
    <type>Date</type>
</CustomField>