force-app/main/default/objects/REP_Profile__c/fields/Commercial_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Commission_Rate__c</fullName>
    <defaultValue>0.002</defaultValue>
    <description>Mil rate for commercial orders.</description>
    <inlineHelpText>Mil rate for commercial orders.</inlineHelpText>
    <label>Commercial Commission Rate ($)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>