force-app/main/default/objects/REP_Profile__c/fields/Commercial_Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Order_Contact__c</fullName>
    <description>Email for commercial order notifications, if necessary.</description>
    <inlineHelpText>Email for commercial order notifications, if necessary.</inlineHelpText>
    <label>Commercial Order Notification Email 1</label>
    <type>Email</type>
</CustomField>