force-app/main/default/objects/REP_Profile__c/fields/Commercial_Order_Notification_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Order_Notification_Email_3__c</fullName>
    <description>Additional email for commercial order notifications, if necessary.</description>
    <inlineHelpText>Additional email for commercial order notifications, if necessary.</inlineHelpText>
    <label>Commercial Order Notification Email 3</label>
    <type>Email</type>
</CustomField>