force-app/main/default/objects/REP_Profile__c/fields/Curent_CEHE__c.field-meta.xml
<CustomField>
    <fullName>Curent_CEHE__c</fullName>
    <label>Current CEHE Variable Rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>