force-app/main/default/objects/REP_Profile__c/fields/Current_AEPC_Variable_Rate_cents__c.field-meta.xml
<CustomField>
    <fullName>Current_AEPC_Variable_Rate_cents__c</fullName>
    <label>Current AEPC Variable Rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>