force-app/main/default/objects/REP_Profile__c/fields/Current_AEPN_Variable_Rate_cents__c.field-meta.xml
<CustomField>
    <fullName>Current_AEPN_Variable_Rate_cents__c</fullName>
    <label>Current AEPN Variable Rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>