force-app/main/default/objects/REP_Profile__c/fields/Current_Billing_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Period_End_Date__c</fullName>
    <description>DATE(YEAR(TODAY()),MONTH(TODAY())+1, 1)-1

Temporarily changed on 12/2/2016 to reflect end date as 12/31/2016</description>
    <formula>IF( 
MONTH(Current_Billing_Period_Start_Date__c) = 12, 
DATE( YEAR(Current_Billing_Period_Start_Date__c), 12, 31 ), 
DATE( YEAR(Current_Billing_Period_Start_Date__c), MONTH (Current_Billing_Period_Start_Date__c) + 1, 1 ) - 1 
)</formula>
    <label>Current Billing Period End Date</label>
    <type>Date</type>
</CustomField>