force-app/main/default/objects/REP_Profile__c/fields/Current_Billing_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Period_Start_Date__c</fullName>
    <formula>Date(YEAR(TODAY()),MONTH(TODAY()), 1)</formula>
    <label>Current Billing Period Start Date</label>
    <type>Date</type>
</CustomField>