force-app/main/default/objects/REP_Profile__c/fields/Customer_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email__c</fullName>
    <description>Where should customers send email for questions about plans or their service?</description>
    <inlineHelpText>Where should customers send email for questions about plans or their service?</inlineHelpText>
    <label>Customer Service Email</label>
    <type>Email</type>
</CustomField>