force-app/main/default/objects/REP_Profile__c/fields/Customer_Service_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone_Number__c</fullName>
    <description>What number should TrueCost customers use to contact you about their account?</description>
    <inlineHelpText>What number should TrueCost customers use to contact you about their account?</inlineHelpText>
    <label>Customer Service Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>