force-app/main/default/objects/REP_Profile__c/fields/Days_of_Operations__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Operations__c</fullName>
    <description>How many days have you been serving the Texas retail electric market?  This is based on your Business Start Date.</description>
    <formula>Today()-Business_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many days have you been serving the Texas retail electric market?  This is based on your Business Start Date.</inlineHelpText>
    <label>Days of Operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>