force-app/main/default/objects/REP_Profile__c/fields/Deposit_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Instructions__c</fullName>
    <description>What steps should a customer follow to pay a deposit?  This will be sent to customers via email.</description>
    <inlineHelpText>What steps should a customer follow to pay a deposit?  This will be sent to customers via email.</inlineHelpText>
    <label>Deposit Instructions</label>
    <type>TextArea</type>
</CustomField>