force-app/main/default/objects/REP_Profile__c/fields/Earliest_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date_of_Service__c</fullName>
    <description>When did you start serving the Texas retail electric market?</description>
    <inlineHelpText>When did you start serving the Texas retail electric market?</inlineHelpText>
    <label>Earliest Date of Service</label>
    <type>Date</type>
</CustomField>