force-app/main/default/objects/REP_Profile__c/fields/Escalated_Issues_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Issues_Contact__c</fullName>
    <description>Contact name for any other issues requiring QUICK response.</description>
    <inlineHelpText>Contact name for any other issues requiring QUICK response.</inlineHelpText>
    <label>Escalated Issues Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>