force-app/main/default/objects/REP_Profile__c/fields/Escalated_Issues_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Issues_Email__c</fullName>
    <description>Email for any other issues requiring QUICK response.</description>
    <inlineHelpText>Email for any other issues requiring QUICK response.</inlineHelpText>
    <label>Escalated Issues Email</label>
    <type>Email</type>
</CustomField>