force-app/main/default/objects/REP_Profile__c/fields/Escalated_Issues_Phone__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Issues_Phone__c</fullName>
    <description>Phone number for any other issues requiring QUICK response.</description>
    <inlineHelpText>Phone number for any other issues requiring QUICK response.</inlineHelpText>
    <label>Escalated Issues Phone</label>
    <type>Phone</type>
</CustomField>