force-app/main/default/objects/REP_Profile__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <description>REP primary fax number</description>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>