force-app/main/default/objects/REP_Profile__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <label>Financial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>