force-app/main/default/objects/REP_Profile__c/fields/Friendly_URL__c.field-meta.xml
<CustomField>
    <fullName>Friendly_URL__c</fullName>
    <description>Used internally for TrueCost URLrewriter class.  Put in all lowercase with hyphens for spaces.  For example: friendly-name or reliant-energy etc.</description>
    <inlineHelpText>Used internally for TrueCost URLrewriter class.  Put in all lowercase with hyphens for spaces.  For example: friendly-name or reliant-energy etc.</inlineHelpText>
    <label>Friendly URL</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>