force-app/main/default/objects/REP_Profile__c/fields/General_Issues_Contact__c.field-meta.xml
<CustomField>
    <fullName>General_Issues_Contact__c</fullName>
    <description>Contact name for when REP response is needed for bill, plan, or rewards questions.</description>
    <inlineHelpText>Contact name for when REP response is needed for bill, plan, or rewards questions.</inlineHelpText>
    <label>General Issues Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>