force-app/main/default/objects/REP_Profile__c/fields/General_Issues_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Issues_Email__c</fullName>
    <description>Email for when REP response is needed for bill, plan, or rewards questions.</description>
    <inlineHelpText>Email for when REP response is needed for bill, plan, or rewards questions.</inlineHelpText>
    <label>General Issues Email</label>
    <type>Email</type>
</CustomField>