force-app/main/default/objects/REP_Profile__c/fields/General_Issues_Phone__c.field-meta.xml
<CustomField>
    <fullName>General_Issues_Phone__c</fullName>
    <description>Phone number for when REP response is needed for bill, plan, or rewards questions.</description>
    <inlineHelpText>Phone number for when REP response is needed for bill, plan, or rewards questions.</inlineHelpText>
    <label>General Issues Phone</label>
    <type>Phone</type>
</CustomField>