force-app/main/default/objects/REP_Profile__c/fields/Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Home_Page__c</fullName>
    <description>Enter in the url for your home page.</description>
    <inlineHelpText>Enter in the url for your home page.</inlineHelpText>
    <label>Home Page</label>
    <required>true</required>
    <type>Url</type>
</CustomField>