force-app/main/default/objects/REP_Profile__c/fields/Image_Main__c.field-meta.xml
<CustomField>
    <fullName>Image_Main__c</fullName>
    <description>Your REP logo will be uploaded by an Administrator, and displayed here.</description>
    <formula>IMAGE( Logo_URL__c , &quot;No logo available&quot;, 75,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Your REP logo will be uploaded by an Administrator, and displayed here.</inlineHelpText>
    <label>Image Main</label>
    <type>Text</type>
</CustomField>