force-app/main/default/objects/REP_Profile__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Full legal name of REP</description>
    <inlineHelpText>Full legal name of REP</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>