force-app/main/default/objects/REP_Profile__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>Where the REPs logo is located.  Optimal logo size is 150 X 75 pixels.</description>
    <inlineHelpText>Where the REPs logo is located.  Optimal logo size is 150 X 75 pixels.</inlineHelpText>
    <label>Logo URL (Size 150 X 75px)</label>
    <type>Url</type>
</CustomField>