force-app/main/default/objects/REP_Profile__c/fields/Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Address__c</fullName>
    <description>mailing address</description>
    <inlineHelpText>presented to customers per PUCT rules</inlineHelpText>
    <label>Mailing Street Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>