force-app/main/default/objects/REP_Profile__c/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <label>Mailing Zip</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>