force-app/main/default/objects/REP_Profile__c/fields/Maximum_Credit_Score_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Credit_Score_Age__c</fullName>
    <defaultValue>365</defaultValue>
    <description>How &quot;fresh&quot; a customer&#39;s credit score needs to be to sign up for any of your plans that require a credit score</description>
    <inlineHelpText>How &quot;fresh&quot; a customer&#39;s credit score needs to be to sign up for any of your plans that require a credit score.  Expressed in days</inlineHelpText>
    <label>Maximum Credit Score Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>