force-app/main/default/objects/REP_Profile__c/fields/Maximum_Switch_Days__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Switch_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>How many days in advance can a customer schedule a switch</description>
    <inlineHelpText>How many days in advance can a customer schedule a switch</inlineHelpText>
    <label>Maximum Switch Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>