force-app/main/default/objects/REP_Profile__c/fields/Oncor_Variable_Rate_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Oncor_Variable_Rate_Last_Updated__c</fullName>
    <label>Oncor Variable Rate Last Updated</label>
    <type>Date</type>
</CustomField>