force-app/main/default/objects/REP_Profile__c/fields/Order_Issues_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Issues_Contact__c</fullName>
    <description>Name of contact for any REP action needed for cancellation, date change, order errors, inadvertent switch, etc.</description>
    <inlineHelpText>Name of contact for any REP action needed for cancellation, date change, order errors, inadvertent switch, etc.</inlineHelpText>
    <label>Order Issues Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>