force-app/main/default/objects/REP_Profile__c/fields/Order_Issues_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Issues_Email__c</fullName>
    <description>Email address for cancellation, date change, order errors, inadvertent switch, or other issues.</description>
    <inlineHelpText>Email address for cancellation, date change, order errors, inadvertent switch, or other issues.</inlineHelpText>
    <label>Order Issues Email</label>
    <type>Email</type>
</CustomField>