force-app/main/default/objects/REP_Profile__c/fields/Order_Issues_Phone__c.field-meta.xml
<CustomField>
    <fullName>Order_Issues_Phone__c</fullName>
    <description>Phone number for cancellation, date change, order errors, inadvertent switch,or other issues.</description>
    <inlineHelpText>Phone number for cancellation, date change, order errors, inadvertent switch,or other issues.</inlineHelpText>
    <label>Order Issues Phone</label>
    <type>Phone</type>
</CustomField>