force-app/main/default/objects/REP_Profile__c/fields/Order_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Notification_Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <description>When a customer creates an order, what email address should we send the notification to?</description>
    <inlineHelpText>When a customer creates an order, what email address should we send the notification to?</inlineHelpText>
    <label>Residential Order Notification Email 1</label>
    <type>Email</type>
</CustomField>