force-app/main/default/objects/REP_Profile__c/fields/Publish_Reviews_while_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Publish_Reviews_while_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish Reviews while Inactive</label>
    <type>Checkbox</type>
</CustomField>