force-app/main/default/objects/REP_Profile__c/fields/PUC_Scorecard_Ranking__c.field-meta.xml
<CustomField>
    <fullName>PUC_Scorecard_Ranking__c</fullName>
    <description>1-5 ranking from http://www.powertochoose.org/scorecard/Scorecard.pdf</description>
    <inlineHelpText>1-5 ranking from http://www.powertochoose.org/scorecard/Scorecard.pdf</inlineHelpText>
    <label>PUC Scorecard Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>