force-app/main/default/objects/REP_Profile__c/fields/PUCT_License_Number__c.field-meta.xml
<CustomField>
    <fullName>PUCT_License_Number__c</fullName>
    <description>PUCT License Number</description>
    <inlineHelpText>PUCT License Number (5 digits with no # sign)</inlineHelpText>
    <label>PUCT License Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>