force-app/main/default/objects/REP_Profile__c/fields/Random_Number_for_Sorting__c.field-meta.xml
<CustomField>
    <fullName>Random_Number_for_Sorting__c</fullName>
    <label>Random Number for Sorting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>