force-app/main/default/objects/REP_Profile__c/fields/Renewal_Program_Participant__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Program_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the REP treat renewal orders differently?</description>
    <inlineHelpText>Does the REP treat renewal orders differently?</inlineHelpText>
    <label>Renewal Program Participant</label>
    <type>Checkbox</type>
</CustomField>