force-app/main/default/objects/REP_Profile__c/fields/REP_Account__c.field-meta.xml
<CustomField>
    <fullName>REP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>REP Profiles</relationshipLabel>
    <relationshipName>REP_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>