force-app/main/default/objects/REP_Profile__c/fields/Residential_Renewal_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Residential_Renewal_Commission_Rate__c</fullName>
    <defaultValue>5</defaultValue>
    <description>How much does TrueCost receive per contract month for renewal orders?</description>
    <inlineHelpText>How much does TrueCost receive per contract month for renewal orders?</inlineHelpText>
    <label>Residential Renewal Commission Rate ($)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>