force-app/main/default/objects/REP_Profile__c/fields/Residual_Billing_for_Residential_Orders__c.field-meta.xml
<CustomField>
    <fullName>Residual_Billing_for_Residential_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you wish to pay TrueCost based on $5 a month per active contract each month (maximum of 18 months or $90).</description>
    <inlineHelpText>Check this box if you wish to pay TrueCost based on $5 a month per active contract each month (maximum of 18 months or $90).</inlineHelpText>
    <label>Residual Billing for Residential Orders</label>
    <type>Checkbox</type>
</CustomField>