force-app/main/default/objects/REP_Profile__c/fields/Snapshot_ID__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_ID__c</fullName>
    <description>Salesforce ID for the blog post that is the retailer snapshot for this REP profile.</description>
    <inlineHelpText>Salesforce ID for the blog post that is the retailer snapshot for this REP profile.</inlineHelpText>
    <label>Snapshot ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>