force-app/main/default/objects/REP_Profile__c/fields/Soonest_Move_Date__c.field-meta.xml
<CustomField>
    <fullName>Soonest_Move_Date__c</fullName>
    <defaultValue>3</defaultValue>
    <description>How soon can a customer be moved from now (in days)?  0 means today, 1 means tomorrow, etc.</description>
    <inlineHelpText>How soon can a customer be moved from now (in days)?  0 means today, 1 means tomorrow, etc.</inlineHelpText>
    <label>Soonest Move Date Available</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>