force-app/main/default/objects/REP_Profile__c/fields/Star_ranking__c.field-meta.xml
<CustomField>
    <fullName>Star_ranking__c</fullName>
    <defaultValue>000.50</defaultValue>
    <description>How do your customer-given star ratings compare to other REPs on TrueCost?  The higher the percentage, the higher your approval is versus other REPs.</description>
    <inlineHelpText>How do your customer-given star ratings compare to other REPs on TrueCost?  The higher the percentage, the higher your approval is versus other REPs.</inlineHelpText>
    <label>Star Ranking</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>