force-app/main/default/objects/REP_Profile__c/fields/Star_Rating_Avg__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Avg__c</fullName>
    <description>What is your average customer approval?  A higher percentage means a higher customer approval.</description>
    <inlineHelpText>What is your average customer approval?  A higher percentage means a higher customer approval.</inlineHelpText>
    <label>Star Rating Avg</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>