force-app/main/default/objects/REP_Profile__c/fields/TNMP_Variable_Rate_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>TNMP_Variable_Rate_Last_Updated__c</fullName>
    <label>TNMP Variable Rate Last Updated</label>
    <type>Date</type>
</CustomField>