force-app/main/default/objects/REP_Profile__c/fields/total_reviews__c.field-meta.xml
<CustomField>
    <fullName>total_reviews__c</fullName>
    <description>how many reviews this REP has</description>
    <inlineHelpText>how many reviews this REP has</inlineHelpText>
    <label>total reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>