force-app/main/default/objects/REP_Profile__c/fields/URL_for_new_customer_deposits__c.field-meta.xml
<CustomField>
    <fullName>URL_for_new_customer_deposits__c</fullName>
    <description>URL for new customer deposits</description>
    <inlineHelpText>We&#39;ll show this link to customers that need to pay a deposit on your website as part of their signup process.</inlineHelpText>
    <label>URL for new customer deposits</label>
    <type>Url</type>
</CustomField>