force-app/main/default/objects/REP_Profile__c/fields/Uses_API_for_Orders__c.field-meta.xml
<CustomField>
    <fullName>Uses_API_for_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses API for Orders</label>
    <type>Checkbox</type>
</CustomField>